--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -22,20 +22,23 @@
     }
     @media screen and (max-width: 1279px) {
       padding-left: 34px;
+      gap: 10px;
     }
     @media screen and (max-width: 767px) {
       padding-left: 20px;
+      gap: 20px;
     }
   }
   .button {
     height: 40px;
+    padding: 0px 20px;
     @media screen and (max-width: 1380px) {
       padding: 0px 20px;
     }
     @media screen and (max-width: 767px) {
       height: 32px;
       font-size: 14px;
-      padding: 0px 16px;
+      padding: 0px 10px;
       &.arrow {
         padding-right: 16px;
         span {
@@ -83,7 +86,7 @@
   flex-wrap: wrap;
   align-items: center;
   align-content: center;
-  gap: 24px;
+  // gap: 16px;
   a {
     font-size: 18px;
     line-height: 1.7;
@@ -93,8 +96,13 @@
       color: var(--color);
     }
   }
-  @media screen and (max-width: 1279px) {
+  @media (min-width: 1400px) {
+    gap: 24px;
+  }
+  @media (max-width: 1399px) {
     gap: 16px;
+  }
+  @media screen and (max-width: 1279px) {
     a {
       font-size: 14px;
     }
